# game

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  ha  ha.bat  r  r.bat  run_sanitized.sh  vs-chromium-project.txt
docs/: notes.md  stuff.txt  todo.txt
scripts/batch/: emscripten_build_run.bat  emscripten_driver.bat  emscripten_driver_js_debug.bat  emscripten_driver_js_release.bat  msvc_driver.bat
scripts/cmake/: compiler_flags.cmake  utils.cmake
scripts/cmake/cmake_modules/: FindBoost.cmake  FindLibClang.cmake
scripts/other/: lsan.supp  ubsan.supp
scripts/python/: build.py  format_all.py  format_modifications.py  gen_msg_macros.py  mix_file.py  parse_header.py  parse_source.py  run_cmake.py  setup.py  utils.py
src/: CMakeLists.txt  main.cpp  precompiled.h
src/bgfx_common/: bigg_imgui.h
src/bgfx_common/entry/: entry.cpp  entry.h
src/bullshit/: fast_trigonometry.cpp  flat_map.h  malloc_allocator.h  other.h  timer.h  visiting.cpp
src/core/: Application.cpp  Application.h  Editor.cpp  Editor.h  Entity.cpp  Entity.h  Events.cpp  Events.h  GeometryFactory.cpp  GeometryFactory.h  GraphicsHelpers.cpp  GraphicsHelpers.h  Input.cpp  Input.h  InputEvent.cpp  InputEvent.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  PagedMixinAllocator.h  PagedMixinAllocator_tests.cpp  PluginManager.cpp  PluginManager.h  ResourceManager.h  ResourceManager.inl  ResourceManager_tests.cpp  StringTypes.h  World.cpp  World.h  bigg_assets.h  bigg_imgui.hpp  tags.h
src/core/imgui/: ImGuiManager.cpp  ImGuiManager.h  imgui_bindings.cpp  imgui_bindings_common.h  imgui_stuff.cpp  imgui_stuff.h
src/core/messages/: message_macros.h  messages.cpp  messages.h  messages_camera.h  messages_common.h  messages_editor.h  messages_rendering.h
src/core/registry/: registry.cpp  registry.h
src/core/rendering/: GLSentries.h  GPUProgram.cpp  GPUProgram.h  GPUProgramPtr.h  GraphicsHelpers.cpp  GraphicsHelpers.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderPtr.h  ShaderType.h  Texture.cpp  Texture.h  TexturePtr.h  Vertex.h
src/core/serialization/: JsonData.h  serialization.cpp  serialization.h  serialization_2.h  serialization_common.h  serialization_tests.cpp
src/mixins/messages/: messages.cpp  messages.h  messages_camera.h  messages_common.h
src/mixins/mixins/: camera.cpp  camera.mix  common.cpp  common.mix  common_mixin.cpp  common_mixin.h  common_mixin_fwd.h  deymn.cpp  deymn.mix  exe_mixin.cpp  exe_mixin.h  exe_mixin_fwd.h
src/plugins/camera/: camera.cpp  camera.mix
src/plugins/common/: common.cpp  common.mix
src/plugins/dummy/: dummy.cpp  dummy.mix  trololo.cpp  trololo.mix
src/plugins/editor/: editor.cpp  editor.h  editor.mix  editor_commands.cpp  editor_gui.cpp
src/plugins/omg/: omg.cpp  omg.mix
src/rcrl/: rcrl.cpp  rcrl_parser.cpp
src/tools/: CMakeLists.txt
src/tools/reflection/: CMakeLists.txt  main.cpp  parser.class.cpp  parser.cpp  parser.enum.cpp  parser.function.cpp  parser.hpp  parser.util.cpp  parser.util.hpp  types.cpp  types.hpp
src/utils/: JsonData.cpp  JsonData.h  c_string.h  glm_proxy.h  preprocessor.h  singleton.h  suppress_warnings.h  transform.h  types.h  utils.cpp  utils.h  utils_tests.cpp  visibility.h
src/utils/aabb/: aabb.cpp  aabb.h  aabb.hpp
src/utils/base64/: base64.cpp  base64.h
src/utils/doctest/: doctest_proxy.h  doctest_runner.cpp
